src/objects/knowledgetype__c.object
<CustomObject>
    <fields>
        <fullName>IS_downtype__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否最底层类型</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>father_type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>父级类型</label>
        <referenceTo>knowledgetype__c</referenceTo>
        <relationshipLabel>知识库类型</relationshipLabel>
        <relationshipName>pZEF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sort__c</fullName>
        <label>排序</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>知识库类型</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>类型</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>知识库类型</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>